--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -1,6 +1,6 @@
 $primary-background:#323232;
 
-
+//Navigation Bar
 .navigation{
     background-color: $primary-background;
     width:100%;
@@ -23,10 +23,34 @@ ul{
 li{
     list-style-type: none;
     margin-left: 1em;
-    margin-right: 3em;
+    margin-right: 2.5em;
     font-size: 150%;
     line-height: 200%;
-    stroke-width: 1px;
-    fill: green;
   }
+}
+
+
+//Hero Image
+.heroimage{
+  width: 100%;
+  height: auto;
+  position:fixed;
+}
+.heroimage__overlay{
+  width: 100%;
+  height: auto;
+  background-color: #323232;
+  opacity: 0.5;
+}
+.heroimage__text{
+  color:white;
+  font-size: 6vw;
+  font-weight: bold;
+  line-height: 200%;
+  position: absolute;
+
+  top:40%;
+  left:40%;
+  text-align: center;
+  transform: translate(-50%, -50%);
 }
